update tracing library

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,9 +47,10 @@ springdoc.swagger-ui.path=/swagger-ui.html
 management.endpoints.web.exposure.include=health,prometheus,info
 management.metrics.export.prometheus.enabled=true
 
-spring.sleuth.propagation.type=w3c,b3
-spring.sleuth.opentracing.enabled=true
-spring.zipkin.base-url=http://localhost:9411
+management.tracing.sampling.probability=1.0
+micrometer.observations.annotations.enabled=true
+tracing.url=http://localhost:4317
+
 
 
 resilience4j.retry.instances.microservice.max-attempts=3
